<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_alignParentBottom="true"
    android:layoutDirection="ltr"
    android:fitsSystemWindows="true"
    android:background="@drawable/grad"
    tools:context="com.hydr.instasaver.MainActivity">

    <RelativeLayout
        android:id="@+id/rellay1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="10dp">



        <RelativeLayout
            android:id="@+id/rltei"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >

            <com.libizo.CustomEditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:hint="@string/username"
                android:id="@+id/edt"
                android:layout_alignParentStart="true"
                android:textColorHint="@color/white"
                android:inputType="text"
                android:textColor="@color/white"
                android:layout_toStartOf="@id/rightim"
                android:drawableStart="@drawable/ic_baseline_search_24"
                android:layout_centerVertical="true"
                android:textSize="15sp"
                android:imeOptions="actionSearch"
                app:libIZO_setBorderColor="#FFFF"
                app:libIZO_setBorderView="true"
                app:libIZO_setCursorColor="@color/white"
                app:libIZO_setCornerRadius="4dp" />
            <Button
                android:id="@+id/rightim"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="10dp"
                android:layout_marginTop="15dp"
                android:clickable="true"
                android:focusable="true"
                android:layout_centerVertical="true"
                android:adjustViewBounds="true"
                android:background="@drawable/ic_baseline_monetization_on_24" />
        </RelativeLayout>
        <RelativeLayout
            android:id="@+id/imgUser"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/rltei"
            android:layout_marginTop="5dp"
            android:background="@drawable/circle_border">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/profile_image"
                android:layout_width="270dp"
                android:layout_height="270dp"
                android:src="@drawable/profilefinal"
                android:padding="3dp"
                android:layout_margin="5dp"
                android:layout_centerInParent="true"
                app:civ_border_width="3dp"
                app:civ_border_color="#FFFF"/>
            <ProgressBar
                android:id="@+id/progres"
                android:layout_width="wrap_content"
                android:layout_centerHorizontal="true"
                android:indeterminate="true"
                android:indeterminateTintMode="src_atop"
                android:indeterminateTint="@color/gradEnd"
                android:layout_centerVertical="true"
                android:layout_height="wrap_content"
                android:visibility="gone"
                tools:ignore="UnusedAttribute" />
        </RelativeLayout>


        <TextView
            android:id="@+id/tv_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/name"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/imgUser"
            android:textColor="@color/white"
            android:textSize="28sp" />
        <RelativeLayout
            android:id="@+id/vruserrelati"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/tv_name">

            <ImageView
                android:id="@+id/img_verified"
                android:layout_width="22dp"
                android:layout_height="22dp"
                android:layout_centerVertical="true"
                android:layout_toEndOf="@id/tv_address"
                android:background="@drawable/blue_asa"/>


            <TextView
                android:id="@+id/tv_address"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:text="@string/newuser"
                android:textAllCaps="true"
                android:layout_margin="3dp"
                android:textColor="@color/white"
                android:textSize="13sp" />
        </RelativeLayout>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/rellay1"
        >
        <LinearLayout
            android:id="@+id/linlay1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:baselineAligned="false">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:background="@color/followersBg"
                android:gravity="center"
                android:paddingBottom="5dp"
                android:paddingTop="5dp">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:orientation="vertical"
                    tools:ignore="UselessParent">

                    <TextView
                        android:id="@+id/follow"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/nbfolowers"
                        android:textColor="@color/white"
                        android:textSize="24sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="sans-serif-light"
                        android:text="@string/following"
                        android:textAllCaps="true"
                        android:textColor="@color/white"
                        android:textSize="12sp" />

                </LinearLayout>

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:background="@color/followingBg"
                android:gravity="center"
                android:paddingBottom="5dp"
                android:paddingTop="5dp">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:orientation="vertical"
                    tools:ignore="UselessParent">

                    <TextView
                        android:id="@+id/followin"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/nbfollowing"
                        android:textColor="@color/white"
                        android:textSize="24sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="sans-serif-light"
                        android:text="@string/following2"
                        android:textAllCaps="true"
                        android:textColor="@color/white"
                        android:textSize="12sp" />

                </LinearLayout>

            </RelativeLayout>

        </LinearLayout>

    </RelativeLayout>


    <com.google.android.gms.ads.AdView
        xmlns:ads="http://schemas.android.com/apk/res-auto"
        android:id="@+id/adView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        ads:adSize="SMART_BANNER"
        ads:adUnitId="ca-app-pub-8750718022354184/9052162582">
    </com.google.android.gms.ads.AdView>

    <include
        android:layout_above="@id/adView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        layout="@layout/floatlayout" />

</RelativeLayout>
